--- a/mortgage-front/src/index.html
+++ b/mortgage-front/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title >Y.B משכנתאות ופיננסים</title>
+  <title >🎗️Y.B משכנתאות ופיננסים</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/logo.png">
