--- a/mortgage-front/src/index.html
+++ b/mortgage-front/src/index.html
@@ -5,6 +5,8 @@
   <title >🎗️Y.B משכנתאות ופיננסים</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="י.ב. משכנתאות ופיננסים mortgage ">
+  <meta name="keywords" content="משכנתאות ניהול פיננסים mortgage ">
   <link rel="icon" type="image/x-icon" href="assets/logo.png">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
